--- a/agencia-viagens/src/pages/Home/style2.css
+++ b/agencia-viagens/src/pages/Home/style2.css
@@ -10,7 +10,7 @@
     background-color: #008000;
     font-size: 10px;
     margin-top: 40px;
-    margin-bottom: 20px;
+    
     
 }
 
@@ -42,35 +42,44 @@
     margin-left: 30%;
 }
 
+.four{
+     background-color: #008000;
+     padding: 5%;
+}
+
 .four h2 {
     font-size: 25px;
     font-weight:700;
     margin-top: 20%;
     text-align: center;
+    color:#ffffff;
 }
 
 .four p{
     font-size: 20px;
     font-weight:500;
     text-align: center;
+    color:#ffffff;
 } 
 
 .four img{
     width: 100%;
     height: 100%;
+    
 }
 
 .five {
-    background-color: #008000;
     font-size: 10px;
-    margin-top: 20px;   
+    margin-top: 20px;
+    margin-bottom: 10px;
+
     
 }
 
 .five h2 {
     font-size: 25px;
     font-weight:700;
-    color: #ffffff;
+    color: #000000;
     margin-top: 20%;
     text-align: center;
 
@@ -79,13 +88,18 @@
 .five p {
     font-size: 20px;
     font-weight:500;
-    color:#ffffff;
+    color:#000000;
     text-align: center;
 }
 
-.four img{
-    width: 100%;
-    height: 100%;
+.five span{
+    font-size: 20px;
+    font-weight:500;
+}
+
+.five img{
+    width:100%;
+    height:100%;
 }
 
 
